--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 20px;
+      padding: 10px;
     }
     .player-wrapper {
       width: 100%;
@@ -96,7 +96,7 @@
     }
     .social-icons {
       display: flex;
-      gap: 8px;
+      gap: 12px;
     }
     .social-icons a {
       color: white;
@@ -106,6 +106,29 @@
     }
     .social-icons a:hover {
       opacity: 1;
+    }
+    .volume-control {
+      padding: 12px 15px;
+      background: #111;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    #volumeSlider {
+      width: 100%;
+      height: 6px;
+      -webkit-appearance: none;
+      background: #333;
+      border-radius: 3px;
+      outline: none;
+    }
+    #volumeSlider::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      background: #00ff9d;
+      cursor: pointer;
     }
     .history-section {
       padding: 20px;
@@ -181,26 +204,31 @@
           <i class="fas fa-play"></i>
         </div>
         <div class="song-info">
-          <div class="song-title" id="song">Carregando...</div>
-          <div class="artist-name" id="artist">—</div>
+          <div class="song-title" id="song">Clique no botão ▶️ para ouvir</div>
+          <div class="artist-name" id="artist">Praise FM Brasil</div>
         </div>
       </div>
-      <div class="status" id="statusText">Conectando...</div>
+      <div class="status" id="statusText">AO VIVO</div>
     </div>
 
     <div class="station-info">
-      <span id="stationName">Praise FM Brasil</span> <span class="listeners" id="listeners">(— Ouvintes)</span>
+      <span>Praise FM Brasil</span> <span class="listeners" id="listeners">(— Ouvintes)</span>
       <div class="social-icons">
         <a href="https://facebook.com/seu_perfil" target="_blank"><i class="fab fa-facebook-f"></i></a>
         <a href="https://instagram.com/seu_perfil" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="#" id="volumeToggle"><i class="fas fa-volume-up"></i></a>
       </div>
+    </div>
+
+    <!-- Barra de volume -->
+    <div class="volume-control">
+      <i class="fas fa-volume-up" style="color: white; font-size: 1rem;"></i>
+      <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="0.7">
     </div>
 
     <div class="history-section">
       <div class="history-title">HISTORY - LATEST PLAYED SONGS</div>
       <div id="historyList">
-        <!-- Histórico será preenchido aqui -->
+        <div style="text-align:center;color:#999;padding:10px;">Nenhuma música tocada ainda</div>
       </div>
     </div>
 
@@ -213,62 +241,41 @@
   <script>
     const player = document.getElementById('radioPlayer');
     const playPauseBtn = document.getElementById('playPauseBtn');
-    const volumeToggle = document.getElementById('volumeToggle');
+    const volumeSlider = document.getElementById('volumeSlider');
     const songEl = document.getElementById('song');
     const artistEl = document.getElementById('artist');
     const coverImg = document.getElementById('cover');
     const statusText = document.getElementById('statusText');
     const listenersEl = document.getElementById('listeners');
-    const stationNameEl = document.getElementById('stationName');
-    const historyListEl = document.getElementById('historyList');
 
     const LASTFM_API_KEY = '3ce134e4f02accfff4367ada927e6dcd';
     const NOWPLAYING_API = 'https://api.zeno.fm/mounts/metadata/subscribe/marglwedbnltv';
-    const STATION_INFO_API = 'https://api.zeno.fm/station/marglwedbnltv';
+    const STATION_INFO_API = 'https://api.zeno.fm/station/byid/marglwedbnltv'; // URL corrigida
 
     let currentTrackKey = '';
-    const HISTORY_KEY = 'praise_fm_history';
     const MAX_HISTORY = 10;
 
-    // Carrega histórico salvo
-    function loadHistory() {
-      const saved = localStorage.getItem(HISTORY_KEY);
-      return saved ? JSON.parse(saved) : [];
-    }
+    // Histórico em memória (sem localStorage para evitar erros em sandbox)
+    let history = [];
 
-    // Salva histórico
-    function saveHistory(history) {
-      localStorage.setItem(HISTORY_KEY, JSON.stringify(history));
-    }
-
-    // Adiciona nova música ao histórico (sem duplicar consecutiva)
     function addToHistory(song, artist, coverUrl = '') {
       const key = `${artist} - ${song}`;
-      if (key === currentTrackKey) return; // Evita duplicar a mesma música repetida
-
+      if (key === currentTrackKey) return;
       currentTrackKey = key;
 
-      const history = loadHistory();
-      const newItem = { song, artist, coverUrl, timestamp: Date.now() };
-
-      // Remove duplicatas antigas (mesma música em posições diferentes)
-      const filtered = history.filter(item => item.song !== song || item.artist !== artist);
-      filtered.unshift(newItem); // Adiciona no topo
-
-      // Mantém só as últimas MAX_HISTORY
-      const trimmed = filtered.slice(0, MAX_HISTORY);
-      saveHistory(trimmed);
-      renderHistory(trimmed);
+      history = history.filter(item => !(item.song === song && item.artist === artist));
+      history.unshift({ song, artist, coverUrl, timestamp: Date.now() });
+      if (history.length > MAX_HISTORY) history.pop();
+      renderHistory();
     }
 
-    // Renderiza o histórico na tela
-    function renderHistory(history) {
+    function renderHistory() {
+      const list = document.getElementById('historyList');
       if (history.length === 0) {
-        historyListEl.innerHTML = '<div style="text-align:center;color:#999;padding:10px;">Nenhuma música tocada ainda</div>';
+        list.innerHTML = '<div style="text-align:center;color:#999;padding:10px;">Nenhuma música tocada ainda</div>';
         return;
       }
-
-      historyListEl.innerHTML = history.map(item => `
+      list.innerHTML = history.map(item => `
         <div class="history-item">
           <div class="history-img">
             ${item.coverUrl ? `<img src="${item.coverUrl}" alt="" style="width:100%;height:100%;object-fit:cover;border-radius:4px;">` : 
@@ -282,76 +289,50 @@
       `).join('');
     }
 
-    // Escapa HTML para segurança
     function escapeHtml(text) {
       const div = document.createElement('div');
       div.textContent = text;
       return div.innerHTML;
     }
 
-    // Atualiza ícone de play/pause
     function updatePlayPauseIcon() {
       const icon = playPauseBtn.querySelector('i');
-      if (player.paused) {
-        icon.className = 'fas fa-play';
-      } else {
-        icon.className = 'fas fa-pause';
-      }
+      icon.className = player.paused ? 'fas fa-play' : 'fas fa-pause';
     }
 
-    // Função para tocar ou pausar
     function togglePlayback() {
       if (player.paused) {
         player.play().then(() => {
           statusText.textContent = 'AO VIVO';
           statusText.style.color = '#00ff9d';
+          updatePlayPauseIcon();
         }).catch(err => {
           console.warn('Falha ao reproduzir:', err);
-          statusText.textContent = 'Clique para ouvir';
-          statusText.style.color = '#ffcc00';
+          // Não mostra erro — só permite tentar de novo
         });
       } else {
         player.pause();
         statusText.textContent = 'PAUSADO';
         statusText.style.color = '#ffcc00';
+        updatePlayPauseIcon();
       }
-      updatePlayPauseIcon();
     }
 
-    // Controle de volume (toggle mute)
-    let isMuted = false;
-    volumeToggle.addEventListener('click', () => {
-      if (isMuted) {
-        player.volume = 0.7;
-        volumeToggle.innerHTML = '<i class="fas fa-volume-up"></i>';
-      } else {
-        player.volume = 0;
-        volumeToggle.innerHTML = '<i class="fas fa-volume-mute"></i>';
-      }
-      isMuted = !isMuted;
+    // Controle de volume
+    volumeSlider.addEventListener('input', () => {
+      player.volume = volumeSlider.value;
     });
 
-    // Eventos do áudio
+    // Inicializa
+    player.volume = 0.7;
+    updatePlayPauseIcon();
+
+    // Eventos
+    playPauseBtn.addEventListener('click', togglePlayback);
     player.addEventListener('play', updatePlayPauseIcon);
     player.addEventListener('pause', updatePlayPauseIcon);
-    player.volume = 0.7;
 
-    // Tenta autoplay
-    window.addEventListener('load', () => {
-      player.play().then(() => {
-        statusText.textContent = 'AO VIVO';
-        statusText.style.color = '#00ff9d';
-        updatePlayPauseIcon();
-      }).catch(() => {
-        statusText.textContent = 'Clique no botão ▶️ para ouvir';
-        statusText.style.color = '#ffcc00';
-      });
-
-      // Carrega histórico inicial
-      renderHistory(loadHistory());
-    });
-
-    // Metadados em tempo real
+    // Metadados
     function setupNowPlaying() {
       const eventSource = new EventSource(NOWPLAYING_API);
       eventSource.onmessage = (event) => {
@@ -393,29 +374,26 @@
           console.warn('Erro nos metadados:', err);
         }
       };
-      eventSource.onerror = () => {
-        setTimeout(setupNowPlaying, 15000);
-      };
+      eventSource.onerror = () => setTimeout(setupNowPlaying, 15000);
     }
 
-    // Busca número real de ouvintes
+    // Ouvintes reais
     function fetchListeners() {
       fetch(STATION_INFO_API)
         .then(res => res.json())
         .then(data => {
           if (data.listeners !== undefined) {
             listenersEl.textContent = `(${data.listeners} Ouvintes)`;
-            stationNameEl.textContent = data.name || 'Praise FM Brasil';
           }
         })
         .catch(err => {
           console.warn('Erro ao buscar ouvintes:', err);
-          listenersEl.textContent = '(— Ouvintes)';
         });
     }
 
-    setInterval(fetchListeners, 30000);
+    // Inicia tudo
     fetchListeners();
+    setInterval(fetchListeners, 30000);
     setupNowPlaying();
   </script>
 </body>
