--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
       <div class="status" id="statusText">AO VIVO</div>
     </div>
 
+    <!-- Barra inferior com nome da rádio + ouvintes + redes -->
     <div class="station-info">
       <span>Praise FM Brasil</span> <span class="listeners" id="listeners">(— Ouvintes)</span>
       <div class="social-icons">
